# axum-template

./: .gitignore  Cargo.toml  LICENSE  README.md  server.toml.template
src/: config.rs  lib.rs  main.rs
src/handlers/: mod.rs
